erDiagram
    STUDENT ||--o{ ATTENDANCE : has
    STUDENT ||--o{ ENROLLMENT : enrolls
    PROFESSOR ||--o{ COURSE : teaches
    COURSE ||--o{ ENROLLMENT : contains
    COURSE ||--o{ ATTENDANCE : records
    CLASSROOM ||--o{ COURSE : hosts

    STUDENT {
        int student_id PK
        string firstname
        string lastname
        string email
        string phone
        date date_of_birth
        string address
        date enrollment_date
        string status
    }

    PROFESSOR {
        int professor_id PK
        string firstname
        string lastname
        string email
        string phone
        string specialization
        date hire_date
        string status
    }

    COURSE {
        int course_id PK
        string course_code
        string course_name
        string description
        int credit_hours
        int professor_id FK
        int classroom_id FK
        string schedule
        date start_date
        date end_date
    }

    CLASSROOM {
        int classroom_id PK
        string room_number
        string building
        int capacity
    }

    ENROLLMENT {
        int enrollment_id PK
        int student_id FK
        int course_id FK
        date enrollment_date
        string grade
        float attendance_rate
    }

    ATTENDANCE {
        int attendance_id PK
        int student_id FK
        int course_id FK
        date attendance_date
        string status
        string remarks
    }